libs/@local/hashql/ast/tests/ui/lowering/special-form-expander/fn-generics-literal.jsonc
//@ run: fail
//@ description: fn/4 literal as a generic should error out
[
  "::kernel::special_form::fn",
  { "#literal": 2 },
  //~^ ERROR Use a valid generics expression
  { "#struct": {} },
  "_",
  ["+", "a", "b"]
]
